examples/test/testpolicy4631.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4631
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key31: value10
      key7: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value5
          key20: value20
      podSelector:
        matchLabels:
          key42: value2
          key27: value9
